syntax = "proto2";

package groups;

import "i18n.proto";

message Groups {
    message Group {
        required i18n.I18N name = 1;
        repeated int32 types = 2;
        repeated int32 relatedMarketGroups = 3;
    }

    map<int32, Group> entries = 1;
}
